--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,31 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: 'Mono';
+  src: url('../public/fonts/MonoRegular.woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'MSBee-Light';
+  src: url('../public/fonts/MSBee-Light.woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
 html,
 body {
+  font-family: 'MSBee-Light', sans-serif;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+h1,
+.home {
+  font-family: 'Mono' , monospace;
 }
 
 a {
@@ -13,14 +35,4 @@ a {
 
 * {
   box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
 }
