--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,11 +7,11 @@
 } 
 
 .nav--link-button {
-  background-color: rgba(247, 250, 252, 0.1);
-  border: 1px solid #b4b4b4;
+  background-color: rgba(104, 100, 165, 0.1);
+  /* background-color: black; */
 }
 
 .nav--link-button:hover {
-  background-color: rgba(96, 96, 96, 0.5);
-  border: 1px solid #b4b4b4;
+  background-color: rgba(104, 100, 165, 0.5);
+  color: #f7fafc;
 }
