--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,6 +56,7 @@ h1,
 .home {
   font-family: 'Mono' , monospace;
   background: linear-gradient(90.13deg,#d1aad7 .11%,#c88bc4 25.06%,#7b8fdd 50%,#86bff2 74.8%,#bbdef2 99.76%);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
