chore: fix nav bar css

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,35 +1,28 @@
 .nav--toggle {
   position: relative;
-  font-size: 1rem;
+  font-size: 1.25rem;
   cursor: pointer;
   z-index: 3;
 }
 
 .nav--toggle:hover {
-  color: #8c73aa;
+  color: #7b8fdd;
+}
+
+.menu--list {
+  display: flex;
 }
 
 .nav__item {
   margin: 1rem 0;
 }
 
-.nav__link {
-  font-size: 1.5rem;
-  text-decoration: none;
-  color: #fff;
-}
-
-.nav__link:hover {
-  color: #8c73aa;
-}
-
-
 @media (min-width: 769px) {
-  .nav--link-button {
+  .nav--link {
     background-color: rgba(104, 100, 165, 0.1);
   } 
   
-  .nav--link-button:hover {
+  .nav--link:hover {
     background-color: rgba(104, 100, 165, 0.5);
     color: #f7fafc;
   }
@@ -50,7 +43,7 @@
     color: #fff;
     list-style: none;
     transform: translateY(-100%);
-    transition: transform 0.5s ease-in-out, visibility 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out;
     z-index: 2;
     visibility: hidden;
   }
@@ -58,6 +51,10 @@
   .menu--list__active {
     visibility: visible;
     transform: translateY(0%);
+  }
+
+  .nav--link:hover {
+    color: #7b8fdd;
   }
 }
 
