--- a/src/components/darkMode/darkMode.css
+++ b/src/components/darkMode/darkMode.css
@@ -1,5 +1,3 @@
-.react-toggle-track div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+button.nav--link {
+  background-color: rgba(104, 100, 165, 0.1);
 }
